fixd precal page alignmnt, modified z-index for menu background darkness

--- a/Assets/tier1Style.css
+++ b/Assets/tier1Style.css
@@ -277,7 +277,7 @@
                 .sidenav2 {
                     height: 100%;
                     width: 100%;
-                    position: -webkit-fixed; position: fixed; z-index:1; 
+                    position: -webkit-fixed; position: fixed; z-index:-1; 
                     top: 0;
                     left: 0;
                     color:#ffffff;
