--- a/Assets/tier2Style.css
+++ b/Assets/tier2Style.css
@@ -144,9 +144,7 @@
                     display: flex; flex-direction: column;
                     box-shadow: -25px 10px  #5a6d67 inset, 25px 10px  #5a6d67 inset;}
 
-                    #body >#sloganBox{ /*IN COMPARISON TO THE BODY KEEP THE WIDTH OF THE BOXEX @ 80% ( 15% less than the body box ) */
-                        width:80%;
-                      }
+
                     
             /* margin auto centers the body box */
             /*BE MINDFUL "relative positioning causes links to NOT WORK !!!*/ /* z-indexing might help (???) */
@@ -171,7 +169,7 @@
                         border-width:5px 15px 5px 15px;   background-color:#b1d5d8; border-radius: 5px;
                         } 
                         /*MUST specify all (3).. width, style, & color of borders */
-
+                        
              /* ---------------------------------------------------- */               
             #footer {   font-size:0.7em; box-shadow: 0px -3px 2px #888888;
                 text-shadow: 1px 1px 2px #3a3a3a, 0 0 25px #424242, 0 0 5px #2d2d2d; 
@@ -238,7 +236,7 @@
         .sidenav2 {
             height: 100%;
             width: 100%;
-            position: -webkit-fixed; position: fixed; z-index:1; 
+            position: -webkit-fixed; position: fixed; z-index:-1; 
             top: 0;
             left: 0;
             color:#ffffff;
